[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
argon2 = "0.5.2"
async-trait = "0.1.73"
futures = "0.3.28"
futures-util = "0.3.28"
jsonwebtoken = "8.3.0"
rand = "0.8.5"
redis = { version = "0.23.3", features = ["tokio-comp"] }
rsa = "0.9.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "postgres"] }
utoipa = { version = "4.1.0", features = ["chrono", "actix_extras"] }
utoipa-swagger-ui = { version = "5.0.0", features = ["actix-web"] }
